# SourceGeneration

./: .editorconfig  .gitattributes  .gitignore  README.md  SourceGenerator.sln
CMakeModule/: .gitignore  CMakeLists.txt  rezacht.sh  test.c  writer.c  writer.h
CMakeModule/tools/: SourceGenerator  buildall.sh  rezacht.sh
CMakeModule/views/: SubComponent.view  Test.view
FsaVisualizer/: FsaVisualizer.csproj  Program.cs  Rainbow.cs  _Imports.razor
FsaVisualizer/Pages/: Index.razor
FsaVisualizer/Properties/: launchSettings.json
FsaVisualizer/Shared/: FsaNetwork.razor  NavMenu.razor
SourceGenerator/: Classification.cs  Fsa.Builder.cs  Fsa.CommanMatcher.cs  Fsa.CommonMatcher.cs  Fsa.Extensions.cs  Fsa.FeatExtensions.cs  Fsa.Minimize.cs  Fsa.Search.cs  Fsa.Serialization.cs  Fsa.cs  Fsa.cs.txt  Program.cs  SourceGenerator.csproj  Token.cs  TokenStream.cs  TrackedConsoleLine.cs
SourceGenerator.Includes/: IModelAdapters.cs  IRenderView.cs  Includes.cs  SourceGenerator.Includes.csproj  StateDump.cs
SourceGenerator.Installer/: SourceGenerator.Installer.vdproj
SourceGenerator.Test/: SourceGenerator.Test.csproj  TestFsa.Extensions.cs  TestFsa.Serialization.cs  TestFsa.cs
SourceGenerator.VsAdapter/: ModelSourceGenerator.cs  SourceGenerator.VsAdapter.csproj  SourceGeneratorAdapter.cs  _Includes.txt
SourceGenerator.VsEditor/: Classification.cs  SourceGenerator.VsEditor.csproj  SourceGeneratorClassificationDefinition.cs  SourceGeneratorClassifier.cs  SourceGeneratorClassifierProvider.cs  SourceGeneratorFormat.cs  SourceGeneratorFormats.cs  TopLevelFormat.cs  source.extension.vsixmanifest
TestApp/: BlogPostService.cs  Program.cs  TestApp.csproj
TestApp.Generated/: TestApp.Generated.csproj
TestApp.Wasm/: Polyfill.cs  Program.cs  TestApp.Wasm.csproj  _Imports.razor
TestApp.Web/: Program.cs  TestApp.Web.csproj  appsettings.json
(+116 files in other folders)
